Add a gpu log limit of 1000 entries.

Some clients emit too many entries, which causes memory bloat. This has been
observed to consume 3GB+ in the wild.

Bug: 798012
Change-Id: Ia230d9bd338c3173fa0f3fb86e641c731605b016
Reviewed-on: https://chromium-review.googlesource.com/849485
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526882}
Former-commit-id: 98676f6ea0ebcf48a40d7bda0d8457196caee458